k8s/base/api-gateway/httpbin.yaml
# File này là một hệ thống "Chim Mồi", khởi chạy một Backend siêu nhẹ mang tên "httpbin"
# Httpbin là một dạng Echo Server: Cứ bắt được Request HTTP có nội dung/Headers gì thì phản hồi lại y xì đúc dạng chuỗi JSON.
# Mục đích chính: Sử dụng nó để kiểm chứng xem Kong đã làm đúng nhiệm vụ (Routing, Rate Limiting, CORS, JWT Auth) hay chưa mà không lo ngại yếu tố nhiễu của code riêng.

# 1. Tạo Deployment (Khởi tạo Pod chứa bản code của httpbin)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: kennethreitz/httpbin      # Docker image tiêu chuẩn từ cộng đồng dev
        ports:
        - containerPort: 80
---
# 2. Tạo Service nội bộ (Tạo tên định danh để Ingress Controller của Kong có thể thấy và Forward luồng API vào Pod này)
apiVersion: v1
kind: Service
metadata:
  name: httpbin-service
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: httpbin
