k8s/base/api-gateway/public-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-ingress
  annotations:
    kubernetes.io/ingress.class: kong
    # KHÔNG bật keycloak-jwt-auth ở đây để người dùng có thể truy cập Public
    konghq.com/plugins: "global-cors, global-rate-limit"
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - flying-coin.thinhopsops.win
      secretName: cloudflare-origin-tls
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-frontend-service
                port:
                  number: 3000
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: websocket-service
                port:
                  number: 8080
